# Laboratorio-Grafica

./: .gitattributes  .gitignore  README.md
Laboratorio 02/: CMakeLists.txt
Laboratorio 05/: main.cpp
Laboratorio 06/: .gitignore
Laboratorio 06/src/: main.cpp
Laboratorio 06/src/shaders/: fragmentShader.glsl  vertexShader.glsl
Laboratorio02/: main.cpp
Laboratorio03/: main.cpp
Laboratorio04/: 3.3.shader.vs  main.cpp
Laboratorio05/: 3.3.shader.fs  3.3.shader.vs
Laboratorio06/: Makefile
Laboratorio06/src/: main.cpp
Laboratorio06/src/shaders/: fragmentShader.glsl
Laboratorio07/src/: main.cpp
Laboratorio07/src/shaders/: fragmentShader.glsl  vertexShader.glsl
Laboratorio08/src/: cube.h  main.cpp
Laboratorio09/src/: main.cpp
Laboratorio09/src/shaders/: vertexShader.glsl
Laboratorio11/: project.godot
Laboratorio11/scenes/: cubo.tscn  rubick-cube.gd  rubick-cube.tscn
Laboratorio12/: blue.py  grayscale.py  grayscale_save.py  matriz.py  redgreen.py
Laboratorio13/: dibujar_circulo.py  dibujar_con_mouse.py  dibujar_pentagono.py  guardar_circulo.py  guardar_pentagono.py  modificacion_con_mouse.py  rotacion.py
Laboratorio14/: main.py
PF/: .gitignore
PF v2/src/: cube.h  main.cpp
PF v2/src/shaders/: fragmentShader.glsl  vertexShader.glsl
PF/src/: cube.h  main.cpp
PF/src/shaders/: fragmentShader.glsl  vertexShader.glsl
Practica/: Makefile
Practica/src/: main.cpp
dep/include/glad/: glad.h
opencv-template/: CMakeLists.txt  main.cpp  practica01.cpp  test2.cpp
rotaciones/: Makefile
rotaciones/src/: cube.h  main.cpp
(+1 files in other folders)
